Document project structure for enshu-ecovillage
Added a detailed structure for the enshu-ecovillage project, including sections for constitution, proposals, decisions, logs, and governance models.

--- a/日報・運営ログ/2025-11-28.md
+++ b/日報・運営ログ/2025-11-28.md
@@ -2,3 +2,28 @@
 GitHubのリポジトリのたたき台をChatGPTに相談しながら作成
 DiscordとGitHubのアイコンをChatGPTに作ってもらったロゴに変更
 GitHubのREADMEをChatGPTに作ってもらった
+
+enshu-ecovillage/
+│
+├── constitution/        # 憲章・基本原則
+│   └── enshu-constitution.md
+│
+├── proposals/           # 提案書（Layer2）
+│   ├── P-2025-001-agri-plan.md
+│   ├── P-2025-002-ai-governance.md
+│   └── ...
+│
+├── decisions/           # 決定ログ
+│   ├── D-2025-001-approval-of-P-2025-001.md
+│   └── ...
+│
+├── logs/                # 日報・運営ログ
+│   ├── 2025-11-28.md
+│   └── ...
+│
+├── governance-model/    # ガバナンスモデル（Layer1・Layer2・Layer3）
+│   ├── layer1-constitution.md
+│   ├── layer2-decisionflow.md
+│   └── layer3-agents.md
+│
+└── README.md            # 全体の概要
