--- a/デザイン/循環システム/コンポストトイレ.md
+++ b/デザイン/循環システム/コンポストトイレ.md
@@ -38,3 +38,11 @@
 ![写真1](../../images/1-1.png)
 
 ![写真2](../../images/IMG_3271.jpg)
+
+![写真3](../../images/ac9916b1503cc2d98ce72d24ddfea0ba.png)
+
+![写真4](../../images/IMG_3269.jpg)
+
+![写真5](../../images/IMG_3227-1024x683.jpg)
+
+![写真6](../../images/IMG_3226-1024x683.jpg)
