--- a/活動ログ/!活動ログテンプレート.md
+++ b/活動ログ/!活動ログテンプレート.md
@@ -1,7 +1,9 @@
-#◯◯にスタッフとして参加　yyyy年mm月dd日
+# ◯◯にスタッフとして参加　yyyy年mm月dd日
 
-##活動内容
+## 今日やったこと・起きたこと
  -◯◯のマルシェにスタッフとして参加
 
-##気づき・学んだこと
+## 気づき・学び
  -有機農家さんとの繋がりは大事だと思った
+
+## 遠州エコビレッジとの接続点
