--- a/活動ログ/!活動ログテンプレート.md
+++ b/活動ログ/!活動ログテンプレート.md
@@ -1,4 +1,5 @@
-# ◯◯にスタッフとして参加　yyyy年mm月dd日
+# ◯◯にスタッフとして参加　
+## yyyy年mm月dd日
 
 ## 今日やったこと・起きたこと
  -◯◯のマルシェにスタッフとして参加
@@ -6,4 +7,5 @@
 ## 気づき・学び
  -有機農家さんとの繋がりは大事だと思った
 
-## 遠州エコビレッジとの接続点
+## エコビレッジ構想との接続
+ -遠州エコビレッジとしてマルシェに参加の可能性
