--- a/日報・運営ログ/2025/2025-12-2.md
+++ b/日報・運営ログ/2025/2025-12-2.md
@@ -2,12 +2,14 @@
 
 ## 1. 農の活動
 - 9時の畑は朝露で濡れてた
+- 大根、ほうれん草、小松菜の間引きをした
 
 ## 2. コミュニティ・ガバナンス
 - 活動ログや運営ログのテンプレートの作成
 
 ## 3. 気づき・学び
 - 自然農の畑では朝露と草マルチで土が湿り乾燥を遅らせる効果がある
+- もう一回ぐらい間引きが必要だと思う
 
 ## 4. 次の一歩
 - 明日やること：
