--- a/決定ログ/2025/001.md
+++ b/決定ログ/2025/001.md
@@ -1,21 +1,21 @@
-# 決定ログ：{{2025-001}} 可決
+# 決定ログ：2025-001 可決
 
 ## 1. 概要
-- 日付：{{2025-11-28}}
-- 区分：{{運営}}
-- 提案者：{{JUN}}
-- レビューAI：{{ChatGPT}}
-- 承認者：{{JUN}}
+- 日付：2025-11-28
+- 区分：運営
+- 提案者：JUN
+- レビューAI：ChatGPT
+- 承認者：JUN
 
 ---
 
 ## 2. 決定内容
-{{遠州エコビレッジにAIガバナンスを導入}}
+遠州エコビレッジにAIガバナンスを導入
 
 ---
 
 ## 3. 背景・目的
-{{遠州エコビレッジの円滑な運営のため。ポスト資本主義の生き方の提案。}}
+遠州エコビレッジの円滑な運営のため。ポスト資本主義の生き方の提案。
 
 ---
 
@@ -25,7 +25,7 @@
   - 案B：{{AI案B}}
   - その他：{{必要があれば追記}}
 - AIからの指摘／分析：
-  - {{# AIガバナンス導入の利点とリスク（簡潔レビュー）
+  - # AIガバナンス導入の利点とリスク（簡潔レビュー）
 
 ## 利点（Pros）
 
@@ -62,12 +62,12 @@ AIは入力に依存するため、不正確・偏ったデータが入ると判
 ## 総評
 AIガバナンスは遠州エコビレッジに「一貫した知的構造」を与えるが、人間側は「創造・哲学・目的」の役割を手放さないことが重要。  
 **人間（創造） × AI（実務）** の二重螺旋を保つことで、最も健全に機能する。
-}}
+
 
 ---
 
 ## 5. 決定理由
-{{個人で組織の成果を出すため}}
+個人で組織の成果を出すため
 
 ---
 
