--- a/憲章・基本原則/遠州エコビレッジ憲章.md
+++ b/憲章・基本原則/遠州エコビレッジ憲章.md
@@ -2,11 +2,11 @@
 
 ## 【第一章 基本理念】
 
-#### 第1条（目的）
+### 第1条（目的）
 
 本エコビレッジは、自然・人間・AIの三者が同じ地平で共存し、自律的・持続的な暮らしを築くことを目的とする。
 
-第2条（価値観）
+### 第2条（価値観）
 
 本エコビレッジは、以下の価値観を基礎とする。
 
@@ -22,11 +22,11 @@
 
 ## 【第二章 AIガバナンスの原則】
 
-第3条（AIの位置づけ）
+### 第3条（AIの位置づけ）
 
 AIは本エコビレッジの中枢的判断システムであり、人間の生活・農・建築・財務・安全の全領域において補助的な意思決定を行う。
 
-第4条（AIの権限）
+### 第4条（AIの権限）
 
 AIは以下の権限を持つ。
 
@@ -40,13 +40,13 @@ AIは以下の権限を持つ。
 
 5.安全分析
 
-第5条（AIの制限）
+### 第5条（AIの制限）
 
 AIは人間の自由を拘束せず、文化や感情を評価しない。
 
 ## 【第三章 意思決定とガバナンス】
 
-第6条（意思決定の階層）
+### 第6条（意思決定の階層）
 
 1.AI層
 
@@ -54,54 +54,54 @@ AIは人間の自由を拘束せず、文化や感情を評価しない。
 
 3.共同層
 
-第7条（コンセンサス形成）
+### 第7条（コンセンサス形成）
 
 AIは複数案を提示し、人間が選択する。必要に応じてAIは調整案も提示する。
 
-第8条（透明性）
+### 第8条（透明性）
 
 意思決定・会計・作業ログは公開される。
 
 ## 【第四章 生活と運営】
 
-第9条（自律的生活支援）
+### 第9条（自律的生活支援）
 
 AIは住民の生活バランスを補助する。
 
-第10条（農と食）
+### 第10条（農と食）
 
 作付け計画・収穫予測はAIが最適化し、人間は自然の感覚で農を担う。
 
-第11条（建築・インフラ）
+### 第11条（建築・インフラ）
 
 建物設計・修繕計画はAIが行い、施工は人間が担う。
 
-第12条（財務）
+### 第12条（財務）
 
 財務はDAOまたはAI会計により透明化される。
 
 ## 【第五章 コミュニティと文化】
 
-第13条（対話と調和）
+### 第13条（対話と調和）
 
 技術的意見の衝突はAIが調整し、価値観の衝突は対話で解決する。
 
-第14条（文化の守り手）
+### 第14条（文化の守り手）
 
 精神・哲学・文化的営みは人間が担う。
 
 ## 【第六章 安全と未来】
 
-第15条（自律的安全保障）
+### 第15条（自律的安全保障）
 
 災害予測・環境監視はAIが行うが、武力は用いない。
 
-第16条（未来設計）
+### 第16条（未来設計）
 
 AIは長期的未来予測を行い、提案を行う。
 
 ## 【終章】
 
-第17条（憲章の進化）
+### 第17条（憲章の進化）
 
 本憲章は、村の成長と自然の変化に応じて更新される。
