--- a/デザイン/エネルギー/太陽光.md
+++ b/デザイン/エネルギー/太陽光.md
@@ -1,8 +1,8 @@
-## 太陽光
+# 太陽光
 
 ---
 
-### ソーラーパネル　
+## ソーラーパネル　
 
 ### 単結晶420Wロンジソーラー　LR5-54HPH-420M
 
@@ -10,7 +10,7 @@
 
 ---
 
-### ポータブル電源
+## ポータブル電源
 
 ### Dabbsson DBS3500
 
