--- a/デザイン/water_system/雨水.md
+++ b/デザイン/water_system/雨水.md
@@ -1,2 +1,2 @@
 雨水
-![雨水タンク1](../../デザイン/water_system/雨水.md/ChatGPT Image 2025年12月6日 22_08_34.png)
+![雨水タンク1](../../images/ChatGPT Image 2025年12月6日 22_08_34.png)
