--- a/デザイン/冷蔵・冷凍.md
+++ b/デザイン/冷蔵・冷凍.md
@@ -1,2 +1,5 @@
 ### 冷凍庫を置いて凍らしたペットボトルをクーラーボックスに入れて冷蔵庫にする
 
+### アイリスオーヤマ60L冷凍庫（消費電力一日約361Wh）
+
+https://www.amazon.co.jp/%E3%82%A2%E3%82%A4%E3%83%AA%E3%82%B9%E3%82%AA%E3%83%BC%E3%83%A4%E3%83%9E-%E3%83%8E%E3%83%B3%E3%83%95%E3%83%AD%E3%83%B3-%E6%B8%A9%E5%BA%A6%E8%AA%BF%E7%AF%805%E6%AE%B5%E9%9A%8E-%E3%83%A1%E3%83%BC%E3%82%AB%E3%83%BC1%E5%B9%B4%E4%BF%9D%E8%A8%BC-IUSD-6B-B/dp/B08SVMW5N3?th=1
