--- a/デザイン/water_system/雨水.md
+++ b/デザイン/water_system/雨水.md
@@ -1,3 +1,3 @@
 ## コダマ樹脂工業　雨水タンク
 
-https://www.nissei-web.co.jp/c/99/110110310017ra
+[コマダ樹脂工業雨水タンク](https://www.nissei-web.co.jp/c/99/110110310017ra)
