--- a/デザイン/冷蔵・冷凍.md
+++ b/デザイン/冷蔵・冷凍.md
@@ -1,4 +1,4 @@
-### 冷凍庫を置いて凍らしたペットボトルをクーラーボックスに入れて冷蔵庫にする
+### 冷凍庫は電気で動かし凍らしたペットボトルをクーラーボックスに入れて冷蔵庫にする
 
 #### アイリスオーヤマ60L冷凍庫（消費電力一日約361Wh）
 ポータブル電源Dabbsson DBS3500の容量が3500Whだから約１日に1/10の容量を使う
