--- a/デザイン/food_system/パーマカルチャー/チキンドーム.md
+++ b/デザイン/food_system/パーマカルチャー/チキンドーム.md
@@ -1,1 +1,141 @@
-チキンドーム
+# チキンドーム
+
+チキンドームは移動式のニワトリ小屋であり、1年を通して作物とのローテーションを組んで農地の中を移動させ、ニワトリによる除草と施肥および耕起を行う。
+軽量で移動しやすいことや、円形であるためニワトリへのストレスが少ないことなどから、多くのパーマカルチャー農場で使われているパーマカルチャーの必須アイテムの一つである。
+
+## ニワトリを飼う場合の注意事項
+
+ニワトリはマレーシアの熱帯雨林が原産地で、森林の生き物であった。
+
+基本的に雄鳥1羽と複数の雌鳥によって構成される集団を形成して生活するので、そのような飼い方をするのがよい。
+
+一つのニワトリ小屋に入れるニワトリの数は30羽まで。
+　30羽まではお互いを認識できるが、それ以上になると認識できなくなり、会うたびに喧嘩になる。
+
+餌は残飯、野菜くず、おから、米ぬかなど。
+
+他にも雑草、虫、地虫、ミミズ、落ちた果実や葉なども食べる。
+
+外敵から身を守るために木の上で眠る習性があるので、とまり木を用意してやるとよい。
+
+## チキンドームの特徴
+
+基本サイズでは2〜3羽程度のニワトリを飼育できる。
+
+換気がよく、適度の日当たり、そして日陰ができる。
+
+雨避けもあり、また天敵からニワトリを守ることができる。
+
+敷地面積はおよそ3㎡で、ニワトリが自由に行動するのに十分な空間がある。
+
+## チキンドームのつくり方
+
+### 必要な材料
+
+長さ3m、直径16mmのビニールパイプ：6本
+
+ビニールパイプ用接着剤
+
+ビニールパイプのジョイント：6個
+
+針金
+
+幅1m、長さ15mの金網またはネット
+
+紫外線で劣化しないヒモ
+
+とまり木用の竹または木材
+
+産卵用の巣箱（廃材で木の箱をつくる）
+
+1.2m四方のビニールシート
+
+テント用のペグ
+
+水入れ（ニワトリの飲用）
+
+## 組み立て
+
+枠
+
+横軸（73頁の図参照）
+
+下軸：長さ3mのパイプ2本をジョイントでつなぐ。
+　ジョイント部分は接着剤でしっかり固める。
+　次に1m置きに印をつけ、横に針金が通るくらいの穴をあける。
+
+中軸：パイプ1本を1mと2mに切断し、2mの方を他の3mパイプとつなぐ。
+　次に0.833m置きにドリルで穴をあける。
+
+上軸：残った1mのパイプを3mパイプとつなぐ。
+　これに0.666m置きにドリルで穴をあける。
+
+縦軸
+
+3mの長さのパイプ3本に、端と真ん中に針金を通すための穴をあける。
+
+この3本のパイプをしならせ、半円状にしてそれぞれの端を横一下軸の内側に針金で留める。
+
+3本の縦軸の真ん中を針金で結ぶ。
+　これにより半球状のドームができあがる。
+
+縦軸の下から中軸を入れ、縦軸と重なるところにドリルで穴をあけ、針金で結ぶ。
+
+横中軸と同様にして縦軸と横上軸を結ぶ。
+
+筋交い
+
+縦軸と横下軸、および横中軸がつくる下層の8つの四角形のそれぞれに、対角をつなぐ筋交いを入れる。
+
+網張り
+
+ニワトリを狙ってくる動物が何かによって、どのような網を使うかが決まってくる。
+
+ドーム全体に網を張るが、出入り口となる扉をつけるために横中軸と横上軸の間の四角の一つをあけておく。
+
+下層の部分はイヌやキツネなどの被害を避けるために金網にすることが望ましい。
+
+中層と上層は、鳥避けのネットでもよい。
+
+キツネの被害が予想される場所では、下層の網を下に30cmほど余分に取り、埋め込むようにする。
+
+扉
+
+扉は横中軸と横上軸の間に設ける。
+
+ドアの材は何を使ってもよい。
+　布やビニールシートを枠よりも大きめに切り、フレームにヒモで結びつける。
+
+とまり木
+
+直径5cm、長さ80cmほどの竹を2本用意する。
+
+これを縦横2本ずつ組み合わせて正方形のとまり木を作製する。
+
+横上軸から少し低いところに吊るして固定する。
+
+巣箱
+
+巣箱は地上に置くよりも、少し高い位置に置くのがよい。
+
+汚れるのを防ぐため、必要なくなった机の上に置いてもよい。
+
+雨が多い地域では屋根をつけたほうがよい。
+
+ポリバケツを横倒しにして、中に木の板を敷いて代用することも可能。
+
+巣箱には藁を敷くが、箱に入れておかないとニワトリはすぐに藁を引っかいて外に出してしまう。
+
+屋根
+
+屋根については風が問題となる。
+
+風の強い地方では大きな屋根をつけると風に飛ばされる可能性が高い。
+
+比較的小さな防水性の布あるいはビニールシートを、風が通り抜けるように、できるだけ平たい形で取り付ける。
+
+地面にペグで固定し、四隅をヒモで結ぶ。
+
+屋根を取り付け、水飲み用の桶かバケツを入れればチキンドームは完成。
+
+あとはニワトリを入れるだけである。
