--- a/デザイン/food_system/パーマカルチャー/チキンドーム.md
+++ b/デザイン/food_system/パーマカルチャー/チキンドーム.md
@@ -56,7 +56,7 @@
 
 ## 組み立て
 
-枠
+### 枠
 
 横軸（73頁の図参照）
 
@@ -83,11 +83,11 @@
 
 横中軸と同様にして縦軸と横上軸を結ぶ。
 
-筋交い
+### 筋交い
 
 縦軸と横下軸、および横中軸がつくる下層の8つの四角形のそれぞれに、対角をつなぐ筋交いを入れる。
 
-網張り
+### 網張り
 
 ニワトリを狙ってくる動物が何かによって、どのような網を使うかが決まってくる。
 
@@ -99,14 +99,14 @@
 
 キツネの被害が予想される場所では、下層の網を下に30cmほど余分に取り、埋め込むようにする。
 
-扉
+### 扉
 
 扉は横中軸と横上軸の間に設ける。
 
 ドアの材は何を使ってもよい。
 　布やビニールシートを枠よりも大きめに切り、フレームにヒモで結びつける。
 
-とまり木
+### とまり木
 
 直径5cm、長さ80cmほどの竹を2本用意する。
 
@@ -114,7 +114,7 @@
 
 横上軸から少し低いところに吊るして固定する。
 
-巣箱
+### 巣箱
 
 巣箱は地上に置くよりも、少し高い位置に置くのがよい。
 
@@ -126,7 +126,7 @@
 
 巣箱には藁を敷くが、箱に入れておかないとニワトリはすぐに藁を引っかいて外に出してしまう。
 
-屋根
+### 屋根
 
 屋根については風が問題となる。
 
