--- a/日報・運営ログ/!テンプレート/日報テンプレート.md
+++ b/日報・運営ログ/!テンプレート/日報テンプレート.md
@@ -1,18 +1,21 @@
 # 日報（YYYY-MM-DD）
 
-## 1. 農の活動
+## 1.遠州エコビレッジに関する活動
+- リポジトリのアップデート
+
+## 2. 農の活動
 - ○○畑：ジャガイモの土寄せ
 - マルシェ準備：出店者リスト更新
 
-## 2. コミュニティ・ガバナンス
+## 3. コミュニティ・ガバナンス
 - ミーティング内容：
   - ○○について議論
   - 次回までの宿題：〜〜
 
-## 3. 気づき・学び
+## 4. 気づき・学び
 - 低速ギアでの対話から得られた気づき：
   - …
 
-## 4. 次の一歩
+## 5. 次の一歩
 - 明日やること：
   - …
