--- a/デザイン/food_system/自然農/お米.md
+++ b/デザイン/food_system/自然農/お米.md
@@ -35,3 +35,64 @@
 苗代の大きさとどこに作るかが定まったら、まず、その大きさがわかるように目印をつけ（4隅に棒を立てたり、ひもを張るなど）  
 冬草を地面のすれすれのところで刈ります。  
 刈った草や麦は苗床の外側に出しておきます。
+
+# 苗代づくり：表土の処理と米ヌカ補給
+
+## ② 表土を削る
+
+- 冬草や麦の種子をとり除くために、**表土を薄くはがしていく**。  
+- はがした土は、**苗代の両側に置いておく**。
+
+- 初めての場所では、**宿根草（例：ヨモギ・セリ等）がない場所を選ぶ**のが望ましい。  
+  もし宿根草がある場合は、以下の方法で対処する。
+
+> **根もノコ鎌の先を少し地中に入れて切り、とり出す。**  
+> 完全に取り除く必要はなく、再生した場合はその時点で刈ればよい。
+
+---
+
+## ③ 米ヌカを補う
+
+- **米ヌカをふりまき、その上にワラをきれいに並べて被せる。**
+- この状態のまま、**4月の種降ろしの頃まで待つ。**
+
+---
+
+## ワラの固定方法と地表の状態
+
+- ワラが**風で飛び散らないように、竹や棒などを置いて固定する。**
+- 表面の状態：
+  - 草の種のまじった表土
+  - 麦や冬草
+
+---
+
+## 注意点・長期無耕起における変化
+
+- 表土を削るため、**少量の補給が必要**となる。  
+  → **前年に収穫した米のヌカが最適**。
+
+- **量は決して多くしすぎず**、  
+  **うっすらと地表が覆われる程度**にとどめる。
+
+- **無耕起で10年以上経過すると**、
+  - 削り取った後の土は**腐葉土化**し、
+  - **補給が不要になる**。
+  - むしろ補うことで、**発芽や苗の生育に障害が出る場合もある。**
+
+---
+
+## 川口さんの実践事例（12年目以降）
+
+- 苗代は**種降ろし直前に、何も補わずに作る**
+- 発芽後、苗が**3〜5cm**になった頃に
+  - 必要に応じて**少量の米ヌカを散布**
+  - 苗にかかった米ヌカは**そっと払って落とす**
+
+---
+
+## まとめ
+
+- 表土は「**削りすぎない・補いすぎない**」が基本。
+- 初期段階では**米ヌカ＋ワラ**による保護が有効。
+- 長期無耕起では**腐葉土が自然補給源になる**。
