--- a/デザイン/エネルギーシステム/薪.md
+++ b/デザイン/エネルギーシステム/薪.md
@@ -1,1 +1,19 @@
-薪
+# ✅ 薪に使う「広葉樹」と「針葉樹」の特徴
+
+## 🔥 薪としての基本的な違い
+
+| 項目 | 広葉樹 | 針葉樹 |
+|------|--------|--------|
+| 木の種類 | ナラ、クヌギ、サクラ、カシ など | スギ、ヒノキ、マツ、カラマツ など |
+| 密度 | 高い（重い） | 低い（軽い） |
+| 火持ち | 非常に良い（長く燃える） | 悪い（すぐ燃え尽きる） |
+| 火力 | 安定して強い | 一気に強くなる |
+| 着火性 | 悪い（着火しにくい） | 非常に良い（すぐ燃える） |
+| 炎の立ち方 | 静かに燃える | 炎が大きく上がる |
+| 煙の量 | 少ない | 多い |
+| 爆ぜやすさ | 少ない | 多い（パチパチ跳ねる） |
+| ヤニ（樹脂） | ほぼなし | 非常に多い |
+| 煤（スス） | 少ない | 多い（煙突が詰まりやすい） |
+| 乾燥期間 | 1〜2年必要 | 3〜6ヶ月で可 |
+| 薪の価格 | 高価 | 安価 |
+| 主な用途 | 薪ストーブ・囲炉裏・長時間暖房 | 焚き付け・焚き火・着火用 |
