--- a/デザイン/food_system/自然農/お米.md
+++ b/デザイン/food_system/自然農/お米.md
@@ -96,3 +96,282 @@
 - 表土は「**削りすぎない・補いすぎない**」が基本。
 - 初期段階では**米ヌカ＋ワラ**による保護が有効。
 - 長期無耕起では**腐葉土が自然補給源になる**。
+
+# 春の仕事：種降ろし（たねおろし）
+
+## 種籾の選別
+
+種降ろし前日に準備を行う
+
+1反＝6〜7合が目安
+
+水に浸け、浮いた種は除く
+
+塩水選は不要
+
+濡れたままだと蒸れるため、水を切り軽く乾燥
+
+## 種降ろし（4月中旬〜5月初旬）
+
+① 苗代の準備
+
+稲ワラを取り除く（後で使用）
+
+周囲の草を刈る
+
+表土3〜5cmを軽く耕し、平らに整える
+
+種が均一に落ちるよう、鍬裏などで軽く押さえる
+
+② 種をまく
+
+苗代の端から端へ 2〜3回に分けて均一に散布
+
+指の隙間から少量ずつ振る
+
+最後は手で微調整（3cm間隔程度）
+
+③ 土をかぶせる
+
+覆土の厚さ：5〜7mm
+
+フルイまたは手で優しくかける
+
+雑草の種が混じっていない土を使用
+
+④ 軽く押さえる
+
+鍬の裏や板で軽く叩く
+
+土の乾燥を防ぐ
+
+⑤ 草を被せる
+
+周囲の草や前年の稲ワラを利用
+
+草は 10〜15cmに刻む
+
+厚くしすぎない（通気確保）
+
+⑥ モグラ・スズメ対策
+
+周囲を深さ20cmほど掘る
+
+掘った土は外に盛る
+
+最終的に戻して平らに
+
+⑦ 灌水（かんすい）
+
+通常は不要
+
+強い日照が続く場合のみ 1〜2回たっぷり
+
+⑧ 鳥害対策
+
+発芽〜3cmまでは要保護
+
+紐を縦横・斜めに張る
+
+必要に応じてネット設置
+
+⑨ 発芽後の管理
+
+約2週間で発芽
+
+ワラが多すぎたら少し取り除く
+
+土は絶対に裸にしない
+
+## 苗の生長
+
+約2週間後：発芽
+
+種降ろし後30日：除草開始
+
+米ヌカ追肥もこの時期
+
+# 夏の仕事：田植え準備
+
+① 畦草を短く刈る
+
+水漏れ防止
+
+刈り草は田に戻す
+
+② 取水口の整備
+
+枯れ葉・石・ゴミを除去
+
+水がスムーズに流れるように
+
+③ 田に水を入れる
+
+全ての水路を整えてから通水開始
+
+水の入った田は非常に美しい
+
+④ 畦塗り（2日作業）
+1日目
+
+土を寄せて畦の土台作り
+
+溝幅：約30cm
+
+高さ：約20cm
+
+2日目
+
+乾いた畦に泥を塗って防水層を形成
+
+モグラ穴を完全封鎖
+
+## 🌾 田植え
+
+苗は 1本ずつ
+
+深すぎず浅すぎず
+
+根と茎の接点が地表と一致
+
+苗の周囲 直径7〜8cmは草を被せない
+
+📏 条間・株間
+
+条間：35〜40cm
+
+株間：20〜30cm
+
+例：40cm × 40cm（自然農20年目の実例）
+
+## 🌿 田の草に応じる（除草）
+
+稲が負けそうな場所だけ手助け
+
+全面刈りはしない
+
+水を抜いて作業するとやりやすい
+
+主な田の雑草
+
+セリ
+
+ミゾソバ
+
+アゼムシロ
+
+チドメグサ
+
+イヌタデ
+
+タガラシ
+
+メヒシバ
+
+コゴメカヤツリ など
+
+## ✂️ 畦の草刈り
+
+年 3回
+
+5月末
+
+8月末
+
+10月末
+
+刈った草は田に戻す
+
+安全第一（草刈機使用時）
+
+# 秋の仕事：稲刈り・収穫
+
+## 稲刈りの基本
+
+稲刈りは 1人でも可能
+
+手作業の場合、風・天候を選ぶ
+
+刈り取った稲は すぐに寝かせず、束ねて乾燥へ
+
+3〜6株を1束にするのが目安
+
+## ✂️ 稲の刈り方
+
+稲の根元をしっかり持つ
+
+刃物（鎌）で 一気に刈り取る
+
+刈り取った後は 穂先を揃える
+
+地面に叩きつけたりしない（脱粒防止）
+
+## 🪢 稲束（いなづか）のしばり方
+
+基本手順
+
+稲ワラを2〜3本取る
+
+稲の中央を軽く縛る
+
+根元側から一方向にしっかり締める
+
+最後に強く固定
+
+結び方のポイント
+
+結び目は 穂側ではなく根元側
+
+締めすぎない（乾燥で細くなる）
+
+作業しやすい高さで結ぶ
+
+## 🌾 稲架（はざ）掛け（天日干し）
+
+稲架掛けの目的
+
+自然乾燥による 旨味・香り・保存性の向上
+
+完全乾燥させることで カビ防止
+
+稲架の条件
+
+地面から 30cm以上
+
+風通しの良い場所
+
+雨が直接当たらない場所
+
+掛け方
+
+稲束を 左右交互に掛ける
+
+穂先を外側に向ける
+
+重なりすぎないよう間隔を取る
+
+## ☀️ 乾燥期間の目安
+
+状態	期間
+初期乾燥	2週間
+完全乾燥	約1ヶ月
+
+雨が続く場合は日数延長
+
+手で握って パリッと折れるのが乾燥完了の目安
+
+## 🦜 鳥・動物対策
+
+稲架の周囲に 紐・ネットを張る
+
+鳥の通り道には特に注意
+
+地面に落ちた籾はすぐ回収
+
+## 🧂 脱穀前の最終チェック
+
+粒が 透明→乳白色→完全白色に変化しているか
+
+爪で噛んで しっかり硬ければOK
+
+まだ柔らかい場合は追加乾燥
