--- a/デザイン/セルフビルド/鶏舎.md
+++ b/デザイン/セルフビルド/鶏舎.md
@@ -1,1 +1,146 @@
 # 鶏舎
+
+# 🪨 束石基礎（つかいしきそ）概要
+
+束石基礎とは、地面に直接コンクリートを打たず、**点で建物を支える基礎方式**です。  
+鶏舎・小屋・物置・DIY建築に最も多く使われる、**低コスト・高耐久・水はけ最強**の基礎です。
+
+---
+
+## ✅ 束石基礎の構造
+
+屋根
+
+│
+
+柱
+
+│
+
+木土台（90×90mmなど）
+
+│
+
+束石（点支持）
+
+│
+
+砕石（5〜10cm）
+
+│
+
+地盤
+
+---
+
+## ✅ 束石基礎のメリット
+
+- ✅ 地面から床が浮くため **湿気に強い**
+- ✅ 木材が腐りにくく **耐久性が高い**
+- ✅ **ネズミ・蛇・イタチの侵入を防ぎやすい**
+- ✅ 地震時に力が分散され **倒壊しにくい**
+- ✅ **DIY施工が容易**
+- ✅ 将来の **移設・拡張が可能**
+- ✅ コンクリート打設が不要で **低コスト**
+
+---
+
+## ⚠️ 束石基礎のデメリット
+
+- ❌ 大型建築（10㎡超）には不向き
+- ❌ 不整地では**水平出しが重要**
+- ❌ 点支持のため**荷重計算が必要**
+
+---
+
+## ✅ 束石の設置間隔の目安
+
+| 鶏舎サイズ | 束石の数 | 配置 |
+|------------|----------|------|
+| 2m × 2m | 9個 | 3×3 |
+| 2m × 3m | 12個 | 3×4 |
+| 3m × 4m | 16個 | 4×4 |
+
+※ 間隔は **90〜120cm以内** が基本
+
+---
+
+## ✅ 束石基礎の施工手順
+
+1. 設置場所の整地（雑草・表土10cm除去）
+2. 砕石（5〜10cm）敷き
+3. 転圧して地盤を締める
+4. 束石を配置（碁盤目状）
+5. 水平器で高さ調整
+6. 木土台を設置
+7. アンカーボルトまたは金具で固定
+
+---
+
+## ✅ 防獣・防湿・強化構造（推奨）
+
+地面
+
+↓
+
+防獣金網
+
+↓
+
+砕石
+
+↓
+
+束石
+
+↓
+
+木土台
+
+- 👉 ネズミ・イタチ・蛇をほぼ完全遮断
+- 👉 雨水が即排水され床下が常に乾燥
+
+---
+
+## ✅ 束石基礎が向いている用途
+
+- 平飼い鶏舎
+- 放牧小屋
+- DIY物置
+- 山小屋
+- 薪小屋
+- 倉庫
+
+---
+
+## ❌ おすすめしない基礎との比較
+
+| 基礎方式 | 問題点 |
+|----------|--------|
+| 直置き | 腐る・湿気る・シロアリ |
+| ブロック直置き | 凍上で歪む |
+| ベタ基礎 | 高コスト・移設不可 |
+
+---
+
+## ✅ 束石基礎の基本3原則
+
+- ✅ **地面と床は必ず10cm以上離す**
+- ✅ **束石の下には必ず砕石**
+- ✅ **防獣金網は基礎の外周まで回す**
+
+---
+
+## ✅ まとめ
+
+束石基礎は、
+
+- 「安い」
+- 「強い」
+- 「腐らない」
+- 「動かせる」
+
+という **自給型・小規模分散型建築に最適な基礎方式**です。
+
+---
+
