Update and rename 2025-12-8-ど◯ょっこ.md to 2025-12-08-ど◯ょっこ.md

--- a/知/農業研修/2025/2025-12-08-ど◯ょっこ.md
+++ b/知/農業研修/2025/2025-12-08-ど◯ょっこ.md
@@ -1,4 +1,4 @@
-日付: 2025-12-8
+日付: 2025-12-08
 ## 研修名:ど◯ょっこ
 担当者:
 
@@ -14,4 +14,4 @@
 
 3. 観察・気づき・学び
 - ど◯ょっこの田んぼは２０年近く肥料を入れずに籾殻、藁をまいて収量が１反未満で200kg、多いときで300kgお米が取れる
--
+- 稲を収穫したら束ねるのを藁で束ねれば藁を田んぼにまくときに土に還る
