--- a/ロードマップ.md
+++ b/ロードマップ.md
@@ -1,4 +1,6 @@
 ## ロードマップ
+
+|年|やること|
 |----|-----|
-| 2025~2026年 | 構想・ガバナンス・ドキュメント整備 | 
-| 2027年〜 | 土地探し |
+|2025~2026年|構想・ガバナンス・ドキュメント整備| 
+|2027年〜|土地探し|
