--- a/デザイン/インターネット.md
+++ b/デザイン/インターネット.md
@@ -14,36 +14,36 @@
 
 ```text
                 ┌───────────────┐
-                │   ☀️ 太陽     │
-                │ (自然エネルギー) │
+                │   ☀️ 太陽     
+                │ (自然エネルギー) 
                 └───────┬───────┘
                         │
                         ▼
                 ┌───────────────┐
-                │ 🔋 ソーラーパネル │
-                │ (自家発電)       │
+                │ 🔋 ソーラーパネル 
+                │ (自家発電)       
                 └───────┬───────┘
                         │
                         ▼
                 ┌───────────────┐
-                │ 🔌 蓄電池       │
-                │ (エネルギー自立) │
+                │ 🔌 蓄電池       
+                │ (エネルギー自立) 
                 └───────┬───────┘
                         │
                         ▼
                 ┌───────────────┐
-                │ 🛰 Starlink    │
-                │ (宇宙通信)     │
+                │ 🛰 Starlink    
+                │ (宇宙通信)     
                 └───────┬───────┘
                         │
                         ▼
         ┌─────────────────────────────────┐
-        │ 🌐 インターネット / AI / 知能増幅 │
-        │ (分散知・非中央集権)              │
-        └───────┬─────────────────────────┘
+        │ 🌐 インターネット / AI / 知能増幅 
+        │ (分散知・非中央集権)              
+        └───────────────┬─────────────────┘
                         │
                         ▼
                 ┌───────────────┐
-                │ 👤 人間         │
-                │ (思想・創造・判断) │
+                │ 👤 人間         
+                │ (思想・創造・判断) 
                 └───────────────┘
