--- a/デザイン/インターネット.md
+++ b/デザイン/インターネット.md
@@ -2,7 +2,7 @@
 
 [starlink](https://starlink.com/jp/residential?referral=RC-481067-34312-6&utm_source=google&utm_medium=paid&utm_campaign=sls_jp_src_ggl_brd_stk-pe&utm_content=sls_jp_src_ggl_brd_stk-pe_rom_itp_v4m_txt_ja-jp_pmo-278-52-LP&utm_term=stk-pe_starlink&utm_id=)
 
-# ☀️🌍🛰 太古の自然エネルギー × 宇宙テクノロジー構造
+## ☀️🌍🛰 太古の自然エネルギー × 宇宙テクノロジー構造
 
 ## コンセプト
 **自然 → 自立 → 宇宙 → 情報 → 人間**  
