Update activity log with new observations
Added insights about the mochi-making process and community connections.

--- a/活動ログ/2025/2025-12-30-ひ◯り農園さん餅つき参加.md
+++ b/活動ログ/2025/2025-12-30-ひ◯り農園さん餅つき参加.md
@@ -5,7 +5,8 @@
  - 餅つきに参加
 
 ## 気づき・学び
- - 
+ - もち米を臼でこねる作業がもち米の粒が無くなるまですり潰す
+ - 久しぶりに会う人もいて再会の場に餅つきはとてもいいと思いました
 
 ## エコビレッジ構想との接続
- - 
+ - エコビレッジをやってるだとか農コミュニティをやってるとかという人のつながりがあれば餅つきをやって人が集まるのでは？
