--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -5,3 +5,5 @@
   - 口を開けた結果、空気が自然と入る感じを目指す
 
 動作の結果、自分の身体に起こる変化を感じることが大切
+
+- １日暇なとき宇城式呼吸法を練習して口を開けたときに空気が自然と入る感じを得て次の日に畑の畝立ての続きを宇城式呼吸法をしながら鍬やスコップで畝立てしたら疲れないで腰も痛くならないで畝立てができた、宇城式呼吸法の凄さを実感。
