--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -1,5 +1,20 @@
 # 宇城式呼吸法
 
+## 呼吸法  
+### 口をぱっと開ける
+
+宇城式呼吸法の基本は、  
+まず口を軽くぱっと開けます。
+
+口を開けた時は、  
+息を吸うでもなく、吐くでもなく、  
+ただぱっと口を開けるだけにします。
+
+これだけで身体は  
+口を開けない時よりも  
+強くなります。
+
+
 - まずは口をパッと開けて気道を広げることを身体で理解する
   - 暇があれば口をパッと開けて気道を広げるイメージを繰り返してみる
   - 口を開けた結果、空気が自然と入る感じを目指す
