--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -15,7 +15,8 @@
 強くなります。
 
 ペットボトルはフタを取ることによって中の水が自由に出入りできるようになりますが、
-それは身体でも同じで、ただ口をぱっと開けることで、
+それは身体でも同じで、
+ただ口をぱっと開けることで、
 身体の中に空気が出入りし、
 身体が自然な状態となります。
 
