--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -30,3 +30,5 @@
 - １日暇なとき宇城式呼吸法を練習して口を開けたときに空気が自然と入る感じを得て次の日に畑の畝立ての続きを宇城式呼吸法をしながら鍬やスコップで畝立てしたら疲れないで腰も痛くならないで畝立てができた、宇城式呼吸法の凄さを実感。
 
 ## 宇城式呼吸法✖身体を使う作業　はとても相性がいい
+
+![宇城式呼吸法](../images/宇城式呼吸法.jpeg)
