--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -32,3 +32,39 @@
 ## 宇城式呼吸法✖身体を使う作業　はとても相性がいい
 
 ![宇城式呼吸法](../images/宇城式呼吸法1.jpeg)
+
+# 呼吸の方向と確認方法
+
+次に**鼻から息を吸い**、  
+**手の動きに合わせて口でゆっくり吐いていきます。**
+
+吐く時に重要なことは、  
+**息を前方向に吐き出すのではなく、  
+身体の中を通して下方へ落としこむように吐いていく**  
+ということです。
+
+---
+
+## 呼吸が正しくできているかの確認方法
+
+呼吸が正しくできているかどうかを見るには、  
+**ティッシュペーパーを口の前に垂らし、  
+そこで息を吐いてみると分かりやすい**です。
+
+息を吐いた時に、  
+**ティッシュペーパーが前にゆらいでしまう場合**は、  
+呼吸の空気が**前に働いている状態**です。
+
+これは**正しいあり方ではありません。**
+
+---
+
+## 正しい呼吸の状態
+
+正しい呼吸とは、  
+息を吐いても**ティッシュペーパーがゆらがない**、  
+すなわち**息が体内を通って下へ落ちていく状態**です。
+
+この方法で、  
+**正しく呼吸できているかを確認してみてください。**
+
