--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -23,6 +23,10 @@
   - 暇があれば口をパッと開けて気道を広げるイメージを繰り返してみる
   - 口を開けた結果、空気が自然と入る感じを目指す
 
+- 鼻から息を吸って口から吐くんだけど丹田に空気を落とす感じで呼吸
+  - 宇城式呼吸法ができるようになると気が身体から外に出るようになるらしい
+  - 動物はその気を敏感に感じ取るようだ。畑では野菜にも影響する。
+
 動作の結果、自分の身体に起こる変化を感じることが大切
 
 慣れれば口を開けたときの感覚を口を開けなくてもできるようになる
