--- a/農ログ/宇城式呼吸法.md
+++ b/農ログ/宇城式呼吸法.md
@@ -22,20 +22,20 @@
 - まずは口をパッと開けて気道を広げることを身体で理解する
   - 暇があれば口をパッと開けて気道を広げるイメージを繰り返してみる
   - 口を開けた結果、空気が自然と入る感じを目指す
+  - 慣れれば口を開けたときの感覚を口を開けなくてもできるようになる
 
-- 鼻から息を吸って口から吐くんだけど丹田に空気を落とす感じで呼吸
+- 宇城式呼吸法の効果
+  - 農作業が疲れない、腰が痛くならない、力が増す
   - 宇城式呼吸法ができるようになると気が身体から外に出るようになるらしい
   - 動物はその気を敏感に感じ取るようだ。畑では野菜にも影響する。
 
 動作の結果、自分の身体に起こる変化を感じることが大切
 
-**宇城式呼吸法を実践して得られた結果や変化は文章にして残すことができるが何が起きているのか文章化できない**
-
-慣れれば口を開けたときの感覚を口を開けなくてもできるようになる
-
 - １日暇なとき宇城式呼吸法を練習して口を開けたときに空気が自然と入る感じを得て次の日に畑の畝立ての続きを宇城式呼吸法をしながら鍬やスコップで畝立てしたら疲れないで腰も痛くならないで畝立てができた、宇城式呼吸法の凄さを実感。
 
 ## 宇城式呼吸法✖身体を使う作業　はとても相性がいい
+
+## 宇城式呼吸法は農作業やセルフビルドなど体を使う作業のときだけ使う。それ以外で使うと気が身体に流れすぎて体調を崩す。過ぎたるは及ばざるが如し。
 
 ![宇城式呼吸法](../images/宇城式呼吸法1.jpeg)
 
