--- a/デザイン/物件/空き家/人口予測アンケート.md
+++ b/デザイン/物件/空き家/人口予測アンケート.md
@@ -1,3 +1,5 @@
-# 2025年秋に首長にアンケート
+# 2025年秋に首長に対するアンケート結果
 
 ![今後2〜3年後の人口について](../../../images/今後2〜3年後の人口について.jpg)
+
+![人口減によってすでに影響が出てる事柄](../../../images/人口減によってすでに影響が出てる事柄.jpg)
