--- a/デザイン/物件/空き家/大都市→地方移住の動き.md
+++ b/デザイン/物件/空き家/大都市→地方移住の動き.md
@@ -11,4 +11,4 @@
 - **課題**：地域コミュニティとの関係が壁になりやすく、**溶け込む努力**や**家族・将来設計を踏まえた判断**が重要。  
 - **人口集中は継続**：移住熱が高まっても、**東京への転入超過は続き**、2025年は東京都で**約6.5万人増**（総務省）。  
 - **成功のポイント**：「誰と」「どこで」「何をして」暮らすかを具体化し、**セミナー参加・現地訪問・お試し移住**など段階的準備が有効。  
-- **支援策**：自治体の補助（訪問費・引っ越し費・お試し住宅など）に加え、東京圏からの移住では国制度の**移住支援金（最大100万円**などがあるため、要件を含め情報収集が必要。
+- **支援策**：自治体の補助（訪問費・引っ越し費・お試し住宅など）に加え、東京圏からの移住では国制度の**移住支援金：最大100万円**などがあるため、要件を含め情報収集が必要。
